 - Fix up AssumeAwake Option for the Wakeup Class (Justin)
 - Update BeNext Tag Reader Config File (Alex)
 - Fixed Issue 335 - Update zwave.me KeyFob Config File (Alex)
 - Fixed Issue 336 - Update Aeon Labs DoorSensor Config File (Alex)
 - Fixed Issue 337 - Update Aeon Labs Multi Sensor Config File (Alex)
 - Fixed Issue 338 - Update Aeon Labs Multi Sensor Config File (Alex)
 - Fixed Issue 339 - Update Fibaro Door Opening Sensor Config File (Alex)
 - Fixed Issue 340 - Add Remotec ZRC-100 Remote Control (Alex)
 - Fixed Issue 301 - Add Philio PAN04-1 Relay Insert (Alex)
 - Fixed Issue 341 - Corrected directory/filename errors in manufacturer xml (Alex)
 - Fixed Issue 342 - Added 4 Qubino devices thanks to jeanfrancois (Alex) 
 - Fixed Issue 345 - Added new ids for Fibaro FGK101 and FGBS001 (Alex)
 - Fixed Issue 351 - Added new ids for Vision VS6301 and updated Product Name (Justin)
 - Fixed Issue 348 - Typo in Config Index Number for zwave.me ZME_06436 (Justin)
 - Fix Several Warnings/Initilizers etc (Justin)
 - Fixed Issue 357 - Fixed Qubino manufacturer id from 345 (dec) to 159 (hex) (Alex)
 - Fixed Issue 356 - New ID for Fibaro FGMS001 (Alex) 
 - Do Not Open and Close the Log file on each message. Close it during the
   Destructor (Justin)
 - Race Condition in the RemoveDriver call and Notifications. Add a new
   Notification about the Driver being removed, and by default turn off
   NodeRemoved/ValueRemoved Notifications from being sent if the Driver is
   being unloaded. WARNING: If you call any manager functions that require
   the Driver after recieving this message, there is a high probability your
   application will crash with a SegV (Justin)
 - Fixed Issue 361 - Update Qubino ZMNHDA2 Config File, proper endpoint mapping (Alex)
 - Fixed Issue 359 - Update Qubino ZMNHBA2 Config File, fixed invalid group 4 (Alex)
 - Fixed Issue 360 - Add Config File for Popp 123658 (Alex)
 - Fixed Issue 364 - Update Schlagelink iTemp Config File, removed invalid char (Alex)